# Rust-Codeforces-filter

./: Cargo.toml
src/: main.rs
templates/: A2B  ds  ds2  index.html.tera  success.html.tera
