[package]
name = "codeF"
version = "0.1.0"
workspace = "../"
edition = "2021"
publish = false

[dependencies]
rocket = { path = "../../core/lib" }
reqwest = "0.11.13"
futures = "0.3"
tokio = {version = "1.23.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.13.0"

[dependencies.rocket_dyn_templates]
path = "../../contrib/dyn_templates"
features = ["tera"]
